src/main/gen/LSLParser.java
// Generated from java-escape by ANTLR 4.11.1
package io.github.koollsl.lsl.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Default=1, State=2, Jump=3, Return=4, If=5, Else=6, While=7, Do=8, For=9, 
		Print=10, TypeName=11, ParenthesesLeft=12, ParenthesesRight=13, BracketLeft=14, 
		BracketRight=15, BraceLeft=16, BraceRight=17, Less=18, LessEqual=19, Greater=20, 
		GreaterEqual=21, Equal=22, NotEqual=23, ShiftLeft=24, ShiftRight=25, Plus=26, 
		PlusPlus=27, Minus=28, MinusMinus=29, Multiple=30, Divide=31, Modulus=32, 
		BooleanAnd=33, BooleanOr=34, BooleanNot=35, BitwiseAnd=36, BitwiseOr=37, 
		BitwiseXor=38, BitwiseNot=39, Semicolon=40, Comma=41, Label=42, Assign=43, 
		PlusAssign=44, MinusAssign=45, MultipleAssign=46, DivideAssign=47, ModulusAssign=48, 
		Dot=49, Identifier=50, IntegerConstant=51, FloatingConstant=52, StringConstant=53, 
		Whitespace=54, Newline=55, BlockComment=56, PREPROCESSOR_DIRECTIVE=57, 
		LineComment=58, UnclosedStringConstant=59;
	public static final int
		RULE_file = 0, RULE_globalVariable = 1, RULE_globalVariableValue = 2, 
		RULE_function = 3, RULE_argument = 4, RULE_arguments = 5, RULE_defaultStateDeclaration = 6, 
		RULE_stateDeclaration = 7, RULE_event = 8, RULE_events = 9, RULE_statement = 10, 
		RULE_statementElse = 11, RULE_statementBlock = 12, RULE_expression = 13, 
		RULE_expressions = 14, RULE_lValue = 15, RULE_constant = 16, RULE_constantNumeric = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "globalVariable", "globalVariableValue", "function", "argument", 
			"arguments", "defaultStateDeclaration", "stateDeclaration", "event", 
			"events", "statement", "statementElse", "statementBlock", "expression", 
			"expressions", "lValue", "constant", "constantNumeric"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'default'", "'state'", "'jump'", "'return'", "'if'", "'else'", 
			"'while'", "'do'", "'for'", "'print'", null, "'('", "')'", "'['", "']'", 
			"'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'<<'", "'>>'", 
			"'+'", "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", 
			"'&'", "'|'", "'^'", "'~'", "';'", "','", "'@'", "'='", "'+='", "'-='", 
			"'*='", "'/='", "'%='", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Default", "State", "Jump", "Return", "If", "Else", "While", "Do", 
			"For", "Print", "TypeName", "ParenthesesLeft", "ParenthesesRight", "BracketLeft", 
			"BracketRight", "BraceLeft", "BraceRight", "Less", "LessEqual", "Greater", 
			"GreaterEqual", "Equal", "NotEqual", "ShiftLeft", "ShiftRight", "Plus", 
			"PlusPlus", "Minus", "MinusMinus", "Multiple", "Divide", "Modulus", "BooleanAnd", 
			"BooleanOr", "BooleanNot", "BitwiseAnd", "BitwiseOr", "BitwiseXor", "BitwiseNot", 
			"Semicolon", "Comma", "Label", "Assign", "PlusAssign", "MinusAssign", 
			"MultipleAssign", "DivideAssign", "ModulusAssign", "Dot", "Identifier", 
			"IntegerConstant", "FloatingConstant", "StringConstant", "Whitespace", 
			"Newline", "BlockComment", "PREPROCESSOR_DIRECTIVE", "LineComment", "UnclosedStringConstant"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public DefaultStateDeclarationContext defaultStateDeclaration() {
			return getRuleContext(DefaultStateDeclarationContext.class,0);
		}
		public List<GlobalVariableContext> globalVariable() {
			return getRuleContexts(GlobalVariableContext.class);
		}
		public GlobalVariableContext globalVariable(int i) {
			return getRuleContext(GlobalVariableContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<StateDeclarationContext> stateDeclaration() {
			return getRuleContexts(StateDeclarationContext.class);
		}
		public StateDeclarationContext stateDeclaration(int i) {
			return getRuleContext(StateDeclarationContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSLVisitor ) return ((LSLVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TypeName || _la==Identifier) {
				{
				setState(38);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(36);
					globalVariable();
					}
					break;
				case 2:
					{
					setState(37);
					function();
					}
					break;
				}
				}
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(43);
			defaultStateDeclaration();
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==State) {
				{
				{
				setState(44);
				stateDeclaration();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVariableContext extends ParserRuleContext {
		public TerminalNode TypeName() { return getToken(LSLParser.TypeName, 0); }
		public TerminalNode Identifier() { return getToken(LSLParser.Identifier, 0); }
		public TerminalNode Semicolon() { return getToken(LSLParser.Semicolon, 0); }
		public TerminalNode Assign() { return getToken(LSLParser.Assign, 0); }
		public GlobalVariableValueContext globalVariableValue() {
			return getRuleContext(GlobalVariableValueContext.class,0);
		}
		public GlobalVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).enterGlobalVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).exitGlobalVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSLVisitor ) return ((LSLVisitor<? extends T>)visitor).visitGlobalVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalVariableContext globalVariable() throws RecognitionException {
		GlobalVariableContext _localctx = new GlobalVariableContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_globalVariable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(TypeName);
			setState(51);
			match(Identifier);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Assign) {
				{
				setState(52);
				match(Assign);
				setState(53);
				globalVariableValue();
				}
			}

			setState(56);
			match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVariableValueContext extends ParserRuleContext {
		public GlobalVariableValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalVariableValue; }
	 
		public GlobalVariableValueContext() { }
		public void copyFrom(GlobalVariableValueContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVariableValueVectorContext extends GlobalVariableValueContext {
		public TerminalNode Less() { return getToken(LSLParser.Less, 0); }
		public List<GlobalVariableValueContext> globalVariableValue() {
			return getRuleContexts(GlobalVariableValueContext.class);
		}
		public GlobalVariableValueContext globalVariableValue(int i) {
			return getRuleContext(GlobalVariableValueContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(LSLParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(LSLParser.Comma, i);
		}
		public TerminalNode Greater() { return getToken(LSLParser.Greater, 0); }
		public GlobalVariableValueVectorContext(GlobalVariableValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).enterGlobalVariableValueVector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).exitGlobalVariableValueVector(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSLVisitor ) return ((LSLVisitor<? extends T>)visitor).visitGlobalVariableValueVector(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVariableLValueContext extends GlobalVariableValueContext {
		public TerminalNode Identifier() { return getToken(LSLParser.Identifier, 0); }
		public GlobalVariableLValueContext(GlobalVariableValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).enterGlobalVariableLValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).exitGlobalVariableLValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSLVisitor ) return ((LSLVisitor<? extends T>)visitor).visitGlobalVariableLValue(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVariableValueQuaternionContext extends GlobalVariableValueContext {
		public TerminalNode Less() { return getToken(LSLParser.Less, 0); }
		public List<GlobalVariableValueContext> globalVariableValue() {
			return getRuleContexts(GlobalVariableValueContext.class);
		}
		public GlobalVariableValueContext globalVariableValue(int i) {
			return getRuleContext(GlobalVariableValueContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(LSLParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(LSLParser.Comma, i);
		}
		public TerminalNode Greater() { return getToken(LSLParser.Greater, 0); }
		public GlobalVariableValueQuaternionContext(GlobalVariableValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).enterGlobalVariableValueQuaternion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).exitGlobalVariableValueQuaternion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSLVisitor ) return ((LSLVisitor<? extends T>)visitor).visitGlobalVariableValueQuaternion(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVariableValueConstantNegativeContext extends GlobalVariableValueContext {
		public TerminalNode Minus() { return getToken(LSLParser.Minus, 0); }
		public ConstantNumericContext constantNumeric() {
			return getRuleContext(ConstantNumericContext.class,0);
		}
		public GlobalVariableValueConstantNegativeContext(GlobalVariableValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).enterGlobalVariableValueConstantNegative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).exitGlobalVariableValueConstantNegative(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSLVisitor ) return ((LSLVisitor<? extends T>)visitor).visitGlobalVariableValueConstantNegative(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVariableValueListContext extends GlobalVariableValueContext {
		public TerminalNode BracketLeft() { return getToken(LSLParser.BracketLeft, 0); }
		public TerminalNode BracketRight() { return getToken(LSLParser.BracketRight, 0); }
		public List<GlobalVariableValueContext> globalVariableValue() {
			return getRuleContexts(GlobalVariableValueContext.class);
		}
		public GlobalVariableValueContext globalVariableValue(int i) {
			return getRuleContext(GlobalVariableValueContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(LSLParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(LSLParser.Comma, i);
		}
		public GlobalVariableValueListContext(GlobalVariableValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).enterGlobalVariableValueList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).exitGlobalVariableValueList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSLVisitor ) return ((LSLVisitor<? extends T>)visitor).visitGlobalVariableValueList(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVariableValueConstantContext extends GlobalVariableValueContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public GlobalVariableValueConstantContext(GlobalVariableValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).enterGlobalVariableValueConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).exitGlobalVariableValueConstant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSLVisitor ) return ((LSLVisitor<? extends T>)visitor).visitGlobalVariableValueConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalVariableValueContext globalVariableValue() throws RecognitionException {
		GlobalVariableValueContext _localctx = new GlobalVariableValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_globalVariableValue);
		int _la;
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new GlobalVariableValueListContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(BracketLeft);
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 16888498871353344L) != 0) {
					{
					setState(59);
					globalVariableValue();
					setState(64);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==Comma) {
						{
						{
						setState(60);
						match(Comma);
						setState(61);
						globalVariableValue();
						}
						}
						setState(66);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(69);
				match(BracketRight);
				}
				break;
			case 2:
				_localctx = new GlobalVariableValueVectorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				match(Less);
				setState(71);
				globalVariableValue();
				setState(72);
				match(Comma);
				setState(73);
				globalVariableValue();
				setState(74);
				match(Comma);
				setState(75);
				globalVariableValue();
				setState(76);
				match(Greater);
				}
				break;
			case 3:
				_localctx = new GlobalVariableValueQuaternionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				match(Less);
				setState(79);
				globalVariableValue();
				setState(80);
				match(Comma);
				setState(81);
				globalVariableValue();
				setState(82);
				match(Comma);
				setState(83);
				globalVariableValue();
				setState(84);
				match(Comma);
				setState(85);
				globalVariableValue();
				setState(86);
				match(Greater);
				}
				break;
			case 4:
				_localctx = new GlobalVariableLValueContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				match(Identifier);
				}
				break;
			case 5:
				_localctx = new GlobalVariableValueConstantNegativeContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				match(Minus);
				setState(90);
				constantNumeric();
				}
				break;
			case 6:
				_localctx = new GlobalVariableValueConstantContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(91);
				constant();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(LSLParser.Identifier, 0); }
		public TerminalNode ParenthesesLeft() { return getToken(LSLParser.ParenthesesLeft, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode ParenthesesRight() { return getToken(LSLParser.ParenthesesRight, 0); }
		public StatementBlockContext statementBlock() {
			return getRuleContext(StatementBlockContext.class,0);
		}
		public TerminalNode TypeName() { return getToken(LSLParser.TypeName, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSLVisitor ) return ((LSLVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TypeName) {
				{
				setState(94);
				match(TypeName);
				}
			}

			setState(97);
			match(Identifier);
			setState(98);
			match(ParenthesesLeft);
			setState(99);
			arguments();
			setState(100);
			match(ParenthesesRight);
			setState(101);
			statementBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentContext extends ParserRuleContext {
		public TerminalNode TypeName() { return getToken(LSLParser.TypeName, 0); }
		public TerminalNode Identifier() { return getToken(LSLParser.Identifier, 0); }
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).exitArgument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSLVisitor ) return ((LSLVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_argument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(TypeName);
			setState(104);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentsContext extends ParserRuleContext {
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(LSLParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(LSLParser.Comma, i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSLListener ) ((LSLListener)listener).exitArguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSLVisitor ) return ((LSLVisitor<? extends T>)visitor).visitArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TypeName) {
				{
				setState(106);
				argument();
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(107);
					match(Comma);
					setState(108);
					argument();
					}
					}
					setState(113);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
